--- a/app/pug/layout/_header.pug
+++ b/app/pug/layout/_header.pug
@@ -1,4 +1,4 @@
-header.b-header.fixed-top
+header.b-header
   .container 
     nav.navbar.navbar-expand-lg.bg-body-tertiary 
       .container-fluid
