--- a/app/sass/config/_vars.scss
+++ b/app/sass/config/_vars.scss
@@ -1,5 +1,16 @@
 $deff: 'Roboto';
-$c1: red;
+
+// Brand Colors
+$crimson: #C41949;    // Crimson
+$success: #00AD62;    // Emerald
+$accent: #9A7C4B;     // Gold
+$text-dark: #1D1D1F;  // Near Black
+$text-muted: #6F6B6B; // Gray
+$black: #000000;      // Pure Black
+$white: #FFFFFF;      // Pure White
+$error: #F40004;      // Error Red
+$c1: #d4d4d4;
+
 
 // Media queries breakpoints for mixins
 $xsm: 375px;
