--- a/app/sass/layout/_layout.scss
+++ b/app/sass/layout/_layout.scss
@@ -1,8 +1,9 @@
-// General layout styles go here 
+// General layout styles go here
 
 html,
 body {
   height: 100%;
+  font-family: $deff, sans-serif;
 }
 
 .wrapper {
