--- a/app/pug/layout/_header.pug
+++ b/app/pug/layout/_header.pug
@@ -8,9 +8,9 @@ header.b-header
         .collapse.navbar-collapse(id="navbarSupportedContent")
           ul.navbar-nav.me-auto.mb-2.mb-lg-0
             li.nav-item
-              a.nav-link(aria-current="page" href="#") Home
+              a.nav-link.fw-extra-bold.text-uppercase(aria-current="page" href="#") Products
             li.nav-item
-              a.nav-link(href="#") Link
+              a.nav-link.fw-extra-bold.text-uppercase(href="#") innovations
             li.nav-item.dropdown
               a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Dropdown
               ul.dropdown-menu 
