--- a/app/sass/config/_fonts.scss
+++ b/app/sass/config/_fonts.scss
@@ -1,1 +1,5 @@
-// Font imports and definitions go here 
+@include font_face("Outfit", "../fonts/Outfit-Light/Outfit-Light", 300, normal);
+@include font_face("Outfit", "../fonts/Outfit-Regular/Outfit-Regular", 400, normal);
+@include font_face("Outfit", "../fonts/Outfit-SemiBold/Outfit-SemiBold", 600, normal);
+@include font_face("Outfit", "../fonts/Outfit-Bold/Outfit-Bold", 700, normal);
+@include font_face("Outfit", "../fonts/Outfit-ExtraBold/Outfit-ExtraBold", 800, normal);
