--- a/app/sass/config/_mixins.scss
+++ b/app/sass/config/_mixins.scss
@@ -3,8 +3,7 @@
     font-family: $font-family;
     font-weight: $weight;
     font-style: $style;
-    src: url($file-path + ".woff2") format("woff2"),
-      url($file-path + ".woff") format("woff");
+    src: url($file-path + ".ttf") format("truetype");
   }
 }
 
@@ -81,4 +80,3 @@
     @content;
   }
 }
-
