--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -1,6 +1,6 @@
 include ../layout/_mixins
 doctype html
-html(lang="en")
+html(lang="en" data-bs-theme="dark")
   block head
   include ../layout/_head
   body
