--- a/app/sass/layout/_layout.scss
+++ b/app/sass/layout/_layout.scss
@@ -4,6 +4,12 @@ html,
 body {
   height: 100%;
   font-family: $deff, sans-serif;
+  line-height: $body-line-height;
+}
+
+body {
+  background-color: $main-bg;
+  color: $white;
 }
 
 .wrapper {
