--- a/app/pug/layout/_header.pug
+++ b/app/pug/layout/_header.pug
@@ -1,43 +1,40 @@
 header.b-header
-  .container 
-    nav.navbar.navbar-expand-lg.bg-body-tertiary 
-      .container-fluid
-        a.navbar-brand(href="#") Navbar
-        button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
-          span.navbar-toggler-icon
-        .collapse.navbar-collapse(id="navbarSupportedContent")
-          ul.navbar-nav.me-auto.mb-2.mb-lg-0
-            li.nav-item
-              a.nav-link.fw-extra-bold.text-uppercase(aria-current="page" href="#") Products
-            li.nav-item
-              a.nav-link.fw-extra-bold.text-uppercase(href="#") innovations
-            li.nav-item.dropdown
-              a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Dropdown
-              ul.dropdown-menu 
-                li
-                  a.dropdown-item(href="#") Action
-                li
-                  a.dropdown-item(href="#") Another action
-                li
-                  hr.dropdown-divider
-                li
-                  a.dropdown-item(href="#") Something else here
-            li.nav-item
-              a.nav-link.disabled(href="#") Disabled
-          form.d-flex(role="search")
-            input.form-control.me-2(type="search" placeholder="Search" aria-label="Search")
-            button.btn.btn-outline-success(type="submit") Search
-          ul.navbar-nav
-            li.nav-item.dropdown 
-              button.btn.btn-link.nav-link.px-0.py-2.dropdown-toggle.d-flex.align-items-center(id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme (dark)")
-                span Toggle theme
-              ul.dropdown-menu.dropdown-menu-end(aria-labelledby="bd-theme-text")
-                li
-                  button.dropdown-item.d-flex.align-items-center(data-bs-theme-value="light" aria-pressed="false")
-                    |Light
-                li
-                  button.dropdown-item.d-flex.align-items-center(data-bs-theme-value="dark" aria-pressed="true")
-                    |Dark
-                li
-                  button.dropdown-item.d-flex.align-items-center(data-bs-theme-value="auto" aria-pressed="false")
-                    |Auto
+  .container
+    nav.navbar.navbar-dark.navbar-expand-lg
+      a.navbar-brand.me-14(href="#")
+        img(src="img/logo.svg" alt="logo")
+      button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+        span.navbar-toggler-icon
+      .collapse.navbar-collapse.d-inline-flex.flex-grow-0.ms-13(id="navbarSupportedContent")
+        ul.navbar-nav.me-auto.mb-2.mb-lg-0.column-gap-8
+          li.nav-item.lh-1.dropdown
+            a.nav-link.d-inline-flex.align-items-center.position-relative.fw-extra-bold.text-uppercase.dropdown-toggle.active(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false")
+              span Products
+              +icon('triangle-down')
+            ul.dropdown-menu 
+              li
+                a.dropdown-item(href="#") Action
+              li
+                a.dropdown-item(href="#") Another action
+              li
+                hr.dropdown-divider
+              li
+                a.dropdown-item(href="#") Something else here
+          li.nav-item.lh-1
+            a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") innovations
+          li.nav-item.lh-1
+            a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") Support
+          li.nav-item.lh-1
+            a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") Check code
+          li.nav-item.lh-1
+            a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") Analysis
+          li.nav-item.lh-1
+            a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") About Us
+          li.nav-item.lh-1
+            a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") Contact
+
+      .d-flex.align-items-center.column-gap-5.ms-auto
+        a.icon-link.link-body-emphasis.mw-21(href="#")
+          +icon('glass')
+        a.icon-link.link-body-emphasis.mw-21(href="#")
+          +icon('login')
