--- a/app/sass/config/_utilities.scss
+++ b/app/sass/config/_utilities.scss
@@ -14,6 +14,11 @@ $utilities: map-merge(
         "extra-bold": $font-weight-extra-bold,
         "black": $font-weight-black
       )
+    ),
+    "max-width": (
+      property: max-width,
+      class: mw,
+      values: $max-widths
     )
   )
 );
