--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -1,1 +1,51 @@
-// Header styles go here 
+.header {
+  background: linear-gradient(to right, #000, #6f6b6b);
+
+  .navbar-nav {
+    column-gap: 30px;
+  }
+
+  .nav-link {
+    &::before {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 1.5px;
+      background: $error;
+      bottom: -4px;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease-in-out;
+    }
+
+    &::after {
+      content: "";
+      display: none;
+    }
+
+    &:hover {
+      &::before {
+        width: 100%;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+
+    &.dropdown-toggle {
+      &.show {
+        .icon {
+          transform: rotate(180deg);
+          fill: $error;
+        }
+      }
+
+      .icon {
+        width: 12px;
+        height: 8px;
+        fill: #c8c8c8;
+        margin-left: 5px;
+        // transition: all 0.3s ease-in-out;
+      }
+    }
+  }
+}
