--- a/app/sass/layout/modules/icons.scss
+++ b/app/sass/layout/modules/icons.scss
@@ -1,5 +1,6 @@
 .icon {
   display: inline-block;
-  width: 1rem;
-  height: 1rem;
-} 
+  width: 100%;
+  aspect-ratio: 1/1;
+  fill: currentColor;
+}
