--- a/app/pug/layout/_footer.pug
+++ b/app/pug/layout/_footer.pug
@@ -1,5 +1,57 @@
-footer.footer 
-  .container
-    .row
-      .col-12
-        p.text-center &copy; 2025 Your Company. All rights reserved.
+footer.b-footer.bg-white.pt-4
+  ._content.bg-main.pt-18
+    .container
+      .d-flex.column-gap-6
+        .d-flex.column-gap-20
+          .d-flex.flex-column.me-6
+            h5.text-uppercase.mb-4 Products
+            .d-flex.column-gap-20
+              ul.nav.flex-column.me-10
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Testosterones
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Nandrolones
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Boldenones
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Trenbolones
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Stanozolol
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Primobolan
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Masterones
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Terms of Service
+              ul.nav.flex-column
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Mixes Special Line
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Orals
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Methandienone inj.
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Oxymetholone inj.
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Injectables
+                li.nav-item
+                  a.nav-link.p-0.lh-30.fw-extra-bold(href="#") GW1516
+          .d-flex.flex-column
+            h5.text-uppercase.mb-4 Customer Service
+            ul.nav.flex-column
+              li.nav-item
+                a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Contact Us
+              li.nav-item
+                a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Where To Buy
+              li.nav-item
+                a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Shipping & Returns
+              li.nav-item
+                a.nav-link.p-0.lh-30.fw-extra-bold(href="#") FAQs
+              li.nav-item
+                a.nav-link.p-0.lh-30.fw-extra-bold(href="#") Become a distributor
+        .d-flex.flex-column.align-items-end.ms-auto
+          a.d-block.mw-154.w-100.mb-6(href="#")
+            img.w-100(src="img/logo.svg" alt="logo")
+          p.text-end.fs-13.mw-229 BTW Labs &copy; 2025 — All rights reserved. Privacy & Cookie Policy | Terms of use
+
+
