--- a/app/pug/layout/_header.pug
+++ b/app/pug/layout/_header.pug
@@ -1,7 +1,7 @@
 header.b-header
   .container
     nav.navbar.navbar-dark.navbar-expand-lg
-      a.navbar-brand.me-14(href="#")
+      a.navbar-brand.me-14(href="/")
         img(src="img/logo.svg" alt="logo")
       button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
         span.navbar-toggler-icon
@@ -13,13 +13,22 @@ header.b-header
               +icon('triangle-down')
             ul.dropdown-menu 
               li
-                a.dropdown-item(href="#") Action
+                a.dropdown-item(href="#") Testosterones
               li
-                a.dropdown-item(href="#") Another action
+                a.dropdown-item(href="#") Nandrolones
               li
-                hr.dropdown-divider
+                a.dropdown-item(href="#") Boldenones
               li
-                a.dropdown-item(href="#") Something else here
+                a.dropdown-item(href="#") Trenbolones
+              li
+                a.dropdown-item(href="#") Stanozolol
+              li
+                a.dropdown-item(href="#") Primobolan
+              li
+                a.dropdown-item(href="#") Masterones
+              li
+                a.dropdown-item(href="#") Terms of Service
+
           li.nav-item.lh-1
             a.nav-link.position-relative.fw-extra-bold.text-uppercase(href="#") innovations
           li.nav-item.lh-1
