--- a/app/pug/pages/index/promo.pug
+++ b/app/pug/pages/index/promo.pug
@@ -1,2 +1,12 @@
-section.promo 
+section.b-promo.mb-5
   .container
+    ._content
+      .swiper
+        .swiper-wrapper.pb-13
+          .swiper-slide.bg-black
+            img(src="img/promo/test-e300.png" alt="image")
+          .swiper-slide.bg-black
+            img(src="img/promo/test-e300.png" alt="image")
+          .swiper-slide.bg-black
+            img(src="img/promo/test-e300.png" alt="image")
+        .swiper-pagination
