--- a/app/sass/config/_colors.scss
+++ b/app/sass/config/_colors.scss
@@ -1,5 +1,6 @@
 $custom-colors: (
-  "main": $main-bg
+  "main": $main-bg,
+  "crimson": $crimson
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
