--- a/app/sass/layout/modules/_typography.scss
+++ b/app/sass/layout/modules/_typography.scss
@@ -1,4 +1,44 @@
+h1 {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 44px;
+
+  span {
+    background: linear-gradient(to right, #00cbff, #0051ff);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+h2 {
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 44px;
+}
+
+h3 {
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 30px;
+}
+
+h4 {
+  font-weight: 800;
+  font-size: 24px;
+}
+
 h5 {
-  font-weight: $font-weight-extra-bold;
+  font-weight: 800;
+  font-size: 20px;
+}
+
+h6 {
+  font-weight: 800;
   font-size: 15px;
+}
+
+.body {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
 }
