--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -33,6 +33,10 @@
 // Utilities
 @import "../../node_modules/bootstrap/scss/utilities/api";
 
+// Swiper
+@import "../../node_modules/swiper/swiper.scss";
+@import "../../node_modules/swiper/modules/pagination.scss";
+
 // Layout
 @import "./layout/all";
 @import "./pages/all";
