--- a/app/sass/pages/index/promo/promo.scss
+++ b/app/sass/pages/index/promo/promo.scss
@@ -1,2 +1,8 @@
 .promo {
+  &__content {
+    .swiper-slide {
+      background: radial-gradient(circle at 64% 50%, rgba(0, 103, 209, 0.35), rgba(0, 0, 0, 0) 88%);
+      border-radius: 28px;
+    }
+  }
 }
